update : add endpoint get organizations list
